--- a/about.html
+++ b/about.html
@@ -1,4 +1,9 @@
 <!-- @layout:page -->
 <div class="page about-page">
-    待思考...
+    <div class="header-title">
+        <span>关于作者</span>
+    </div>
+    <div class="content">
+        _(web.page.about)
+    </div>
 </div>
