--- a/message.html
+++ b/message.html
@@ -1,4 +1,9 @@
 <!-- @layout:page -->
 <div class="page message-page">
-    待开发...
+    <div class="header-title">
+        <span>留言</span>
+    </div>
+    <div class="content">
+        ...待开发
+    </div>
 </div>
