--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
     <div class="header-title">
         <span>关于作者</span>
     </div>
-    <div class="content">
+    <div class="content tui-editor-contents">
         _(web.page.about)
     </div>
 </div>
