--- a/message.html
+++ b/message.html
@@ -4,6 +4,6 @@
         <span>留言</span>
     </div>
     <div class="content">
-        ...待开发
+        <div id="gitting-container"></div>
     </div>
 </div>
